# PAOO_Tema2

./: CMakeLists.txt  README.md
include/: Car.h
src/: Car.cpp  main.cpp
